--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -62,4 +62,4 @@ other = "Search for something..."
 other = "Table of Contents"
 
 [copyright]
-other = "Made by {{ .name }} using <a href=\"https://github.com/jackyzha0/quartz\">Quartz</a>, © {{ .year }}"
+other = "Based on <a href=\"https://github.com/jackyzha0/quartz\">Quartz</a> via <a href=\"https://github.com/gohugoio/hugo\">Hugo</a>,  © 2018-{{ .year }}"
