fix rss and site desc
Signed-off-by: ryanwwest <ryan@ryanwwest.com>

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -50,7 +50,7 @@ other = "Search Icon"
 other = "Icon to open search"
 
 [recent_notes]
-other = "DevTech Blog"
+other = "Posts about Tech, PKM, Software Dev, and Research"
 
 [first_3_notes]
 other = "first 3 {{ .notes }}"
